// Copyright 2023 Ant Group Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package kuscia.proto.api.v1alpha1.confmanager;

import "kuscia/proto/api/v1alpha1/common.proto";

option go_package = "github.com/secretflow/kuscia/proto/api/v1alpha1/confmanager";
option java_package = "org.secretflow.v1alpha1.confmanager";

service ConfigurationService {
  rpc CreateConfiguration(CreateConfigurationRequest) returns (CreateConfigurationResponse);

  rpc QueryConfiguration(QueryConfigurationRequest) returns (QueryConfigurationResponse);
}

message CreateConfigurationRequest {
  RequestHeader header = 1;
  string id = 2;
  string content = 3;
}

message CreateConfigurationResponse {
  Status status = 1;
}

message QueryConfigurationRequest {
  repeated string ids = 1;
  string group_name = 2;
}

message QueryConfigurationResponse {
  Status status = 1;
  map<string, QueryConfigurationResult> configurations = 2;
}

message QueryConfigurationResult {
  bool success = 1;
  string err_msg = 2;
  string content = 3;
}
